--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ permissions:
 
 jobs:
   build-linux-alsa:
-    name: Build Linux
+    name: Build Linux with ALSA
     runs-on: ubuntu-latest
     outputs:
       linux-path: ./release/audiofile
@@ -63,7 +63,7 @@ jobs:
           path: ./docs/_build
 
   build-linux-portaudio:
-    name: Build Linux (system PortAudio)
+    name: Build Linux with PortAudio
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
@@ -132,7 +132,8 @@ jobs:
                       CXX=x86_64-w64-mingw32-g++ \
                       CPPFLAGS="-I$(pwd)/portaudio/build/include" \
                       LDFLAGS="-L$(pwd)/portaudio/build/lib" \
-                      PKG_CONFIG_LIBDIR=$(pwd)/portaudio/build/lib/pkgconfig
+                      PKG_CONFIG_LIBDIR=$(pwd)/portaudio/build/lib/pkgconfig \
+                      --host=x86_64-w64-mingw32
           make -j$(nproc)
 
       - name: Strip audiofile.exe only
@@ -176,7 +177,8 @@ jobs:
                       CXX=i686-w64-mingw32-g++ \
                       CPPFLAGS="-I$(pwd)/portaudio/build/include" \
                       LDFLAGS="-L$(pwd)/portaudio/build/lib" \
-                      PKG_CONFIG_LIBDIR=$(pwd)/portaudio/build/lib/pkgconfig
+                      PKG_CONFIG_LIBDIR=$(pwd)/portaudio/build/lib/pkgconfig \
+                      --host=i686-w64-mingw32
           make -j$(nproc)
 
       - name: Strip audiofile.exe only
@@ -195,7 +197,8 @@ jobs:
       - uses: actions/checkout@v5
 
       - name: Install dependencies
-        run: brew install pkg-config automake libtool autoconf gettext intltool gtk-doc asciidoc docbook-xsl portaudio cpanminus
+        run: brew install pkg-config automake libtool autoconf gettext intltool gtk-doc asciidoc docbook-xsl portaudio cpanminus libxml2 && \
+             echo "PATH=$(brew --prefix libxml2)/bin:$PATH" >> $GITHUB_ENV
 
       - name: Install XML parser
         run: cpan XML::Parser
