--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,7 +38,7 @@ jobs:
           chmod +x ./autogen.sh
           ./autogen.sh
           chmod +x ./configure
-          ./configure || true
+          ./configure
           make -j$(nproc)
 
       - name: Strip audiofile binary only
@@ -47,7 +47,7 @@ jobs:
       - name: Upload Linux build with ALSA artifact
         uses: actions/upload-artifact@v4
         with:
-          name: audiofile-linux
+          name: audiofile-linux-alsa
           path: ./audiofile
 
       - name: Upload Documentation artifact
@@ -76,8 +76,8 @@ jobs:
           chmod +x ./autogen.sh
           ./autogen.sh
           chmod +x ./configure
-          ./configure
-          make -j$(nproc) --disable-docs
+          ./configure --disable-docs
+          make -j$(nproc)
 
       - name: Strip audiofile binary only
         run: strip ./audiofile || true
@@ -85,7 +85,7 @@ jobs:
       - name: Upload Linux build with PortAudio artifact
         uses: actions/upload-artifact@v4
         with:
-          name: audiofile-linux-system-pa
+          name: audiofile-linux-portaudio
           path: ./audiofile
 
   build-windows-x64:
@@ -121,8 +121,8 @@ jobs:
                       CPPFLAGS="-I$(pwd)/portaudio/build/include" \
                       LDFLAGS="-L$(pwd)/portaudio/build/lib" \
                       PKG_CONFIG_LIBDIR=$(pwd)/portaudio/build/lib/pkgconfig \
-                      --host=x86_64-w64-mingw32
-          make -j$(nproc) --disable-docs
+                      --host=x86_64-w64-mingw32 --disable-docs
+          make -j$(nproc)
 
       - name: Strip audiofile.exe only
         run: x86_64-w64-mingw32-strip ./audiofile.exe || true
@@ -166,8 +166,8 @@ jobs:
                       CPPFLAGS="-I$(pwd)/portaudio/build/include" \
                       LDFLAGS="-L$(pwd)/portaudio/build/lib" \
                       PKG_CONFIG_LIBDIR=$(pwd)/portaudio/build/lib/pkgconfig \
-                      --host=i686-w64-mingw32
-          make -j$(nproc) --disable-docs
+                      --host=i686-w64-mingw32 --disable-docs
+          make -j$(nproc)
 
       - name: Strip audiofile.exe only
         run: i686-w64-mingw32-strip ./audiofile.exe || true
@@ -185,11 +185,13 @@ jobs:
       - uses: actions/checkout@v5
 
       - name: Install dependencies
-        run: brew install pkg-config automake libtool autoconf gettext intltool gtk-doc asciidoc docbook-xsl portaudio cpanminus libxml2 && \
-             echo "export PATH=$(brew --prefix libxml2)/bin:$PATH" >> $GITHUB_PATH && \
-             echo "export PKG_CONFIG_PATH=$(brew --prefix libxml2)/lib/pkgconfig" >> $GITHUB_ENV && \
-             echo "export LDFLAGS=-L$(brew --prefix libxml2)/lib" >> $GITHUB_ENV && \
-             echo "export CPPFLAGS=-I$(brew --prefix libxml2)/include" >> $GITHUB_ENV
+        shell: bash
+        run: |
+              brew install pkg-config automake libtool autoconf gettext intltool gtk-doc asciidoc docbook-xsl portaudio cpanminus libxml2
+              echo "export PATH=$(brew --prefix libxml2)/bin:$PATH" >> $GITHUB_PATH
+              echo "export PKG_CONFIG_PATH=$(brew --prefix libxml2)/lib/pkgconfig" >> $GITHUB_ENV
+              echo "export LDFLAGS=-L$(brew --prefix libxml2)/lib" >> $GITHUB_ENV
+              echo "export CPPFLAGS=-I$(brew --prefix libxml2)/include" >> $GITHUB_ENV
 
       - name: Install XML parser
         run: cpan XML::Parser
@@ -199,18 +201,12 @@ jobs:
           export PERL_BAD_REGEX=0
           chmod +x ./autogen.sh
           ./autogen.sh
-          chmod +x ./configure || true
-          ./configure
-          make -j$(sysctl -n hw.ncpu) --disable-docs
+          chmod +x ./configure
+          ./configure --disable-docs
+          make -j$(sysctl -n hw.ncpu)
 
       - name: Strip audiofile binary only
         run: strip ./audiofile || true
-
-      - name: Build Documentation
-        run: |
-          cd docs
-          make
-        shell: bash
 
       - name: Upload macOS artifact
         uses: actions/upload-artifact@v4
